# expense_tracker

./: .gitignore  Dockerfile  README.md  cmd.sh  pyproject.toml  receipt.txt  receipt_generator.py  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
app/: main.py  settings.py  version.txt
app/routers/incidents/: common_functions.py  enums.py  incidents.py  models.py
app/routers/report/: models.py  report.py
app/routers/transactions/: common_functions.py  enums.py  models.py  operations.py  transactions.py  update_script.py
app/utils/: db.py  get_common.py  logger.py  token.py
